BUILD: Folder structure, clean up, installed more dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,17 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
+    "baseUrl": ".",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
+    "paths": {
+      "@js/*": ["src/js/*"],
+      "@css/*": ["src/css/*"]
+    },
 
     /* Linting */
     "strict": true,
