FEAT: Added authenthication pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "jsx": "react-jsx",
     "paths": {
       "@js/*": ["src/js/*"],
-      "@css/*": ["src/css/*"]
+      "@css/*": ["src/css/*"],
+      "@assets/*": ["src/assets/*"]
     },
 
     /* Linting */
