--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
+      "@/*": ["./src/*"],
       "@js/*": ["src/js/*"],
       "@css/*": ["src/css/*"],
       "@assets/*": ["src/assets/*"]
